--- a/0_mitchell_study.ipynb
+++ b/0_mitchell_study.ipynb
@@ -335,51 +335,12 @@
       " min: 0.2456910237430322\n",
       " mean: 0.5775018238425268\n",
       " max: 0.99144157573399\n",
-      "\n",
-      "---- 23 fold top 50 voxels \n",
-      " min: -0.03073006056319194\n",
-      " mean: 0.3357973181642587\n",
-      " max: 0.8908676308380681\n",
-      "\n",
-      "---- 24 fold top 50 voxels \n",
-      " min: -0.20785759743935728\n",
-      " mean: 0.2649320251897395\n",
-      " max: 0.9729571437864653\n",
-      "\n",
-      "---- 25 fold top 50 voxels \n",
-      " min: -0.2050703009251642\n",
-      " mean: 0.20097505142306984\n",
-      " max: 0.8341976293765507\n",
-      "\n",
-      "---- 26 fold top 50 voxels \n",
-      " min: -0.26804363617036997\n",
-      " mean: 0.23907830546729783\n",
-      " max: 0.9640351798479034\n",
-      "\n",
-      "---- 27 fold top 50 voxels \n",
-      " min: -0.33359671598436136\n",
-      " mean: 0.25891807257466115\n",
-      " max: 0.9083653427501406\n",
-      "\n",
-      "---- 28 fold top 50 voxels \n",
-      " min: 0.4167691273406562\n",
-      " mean: 0.6602591861321189\n",
-      " max: 0.9714453763305329\n",
-      "\n",
-      "---- 29 fold top 50 voxels \n",
-      " min: 0.5484165516522157\n",
-      " mean: 0.760826065063647\n",
-      " max: 0.9946431359140333\n",
-      "\n",
-      "---- 30 fold top 50 voxels \n",
-      " min: -0.20919130292902088\n",
-      " mean: 0.2614722024294852\n",
-      " max: 0.9927520641684807\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "avg_score = []\n",
     "for i in range(k_folds):\n",
     "\n",
     "    # Extracting filtered (most stable voxels) training set\n",
@@ -430,7 +391,9 @@
     "    ind = np.argpartition(scores, -topK)[-topK:]\n",
     "    \n",
     "    print(f\"---- {i+1} fold top {topK} voxels \\n min: {np.min(scores[ind])}\\n mean: {np.mean(scores[ind])}\\n max: {np.max(scores[ind])}\\n\")\n",
-    "\n"
+    "    avg_score.append(np.mean(scores[ind]))\n",
+    "\n",
+    "print(f\"Mean of top {topK} scores: {np.mean(avg_score)}\")\n"
    ]
   },
   {
@@ -475,7 +438,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualizing the "
+    "### Visualization\n",
+    "wrt. the last cross validation run"
    ]
   },
   {
