--- a/mitchell_stable_voxels.ipynb
+++ b/mitchell_stable_voxels.ipynb
@@ -227,115 +227,37 @@
      "output_type": "stream",
      "text": [
       "---- 1 fold top 50 voxels \n",
-      " min: -4.139328861760555\n",
-      " mean: -1.106045412417308\n",
-      " max: 0.9896598896696216\n",
+      " min: -4.139328861760621\n",
+      " mean: -1.106045412417312\n",
+      " max: 0.9896598896696204\n",
       "\n",
       "---- 2 fold top 50 voxels \n",
-      " min: -7.858748745557463\n",
-      " mean: -2.9094566417104306\n",
-      " max: 0.9222728071335513\n",
+      " min: -7.858748745557609\n",
+      " mean: -2.90945664171041\n",
+      " max: 0.922272807133563\n",
       "\n",
       "---- 3 fold top 50 voxels \n",
-      " min: 0.5443939784747384\n",
-      " mean: 0.775093892931009\n",
+      " min: 0.5443939784747517\n",
+      " mean: 0.7750938929310085\n",
       " max: 0.9998554968393297\n",
       "\n",
       "---- 4 fold top 50 voxels \n",
-      " min: -0.11174333043075246\n",
-      " mean: 0.4589727537658901\n",
-      " max: 0.997823818084851\n",
-      "\n",
-      "---- 5 fold top 50 voxels \n",
-      " min: -1.8887425654771404\n",
-      " mean: -0.582562914379422\n",
-      " max: 0.9448297236763774\n",
-      "\n",
-      "---- 6 fold top 50 voxels \n",
-      " min: -0.2444070584912783\n",
-      " mean: 0.3613918116015352\n",
-      " max: 0.9730611753124357\n",
-      "\n",
-      "---- 7 fold top 50 voxels \n",
-      " min: -0.856418369434184\n",
-      " mean: 0.04401504271058983\n",
-      " max: 0.9503492289929538\n",
-      "\n",
-      "---- 8 fold top 50 voxels \n",
-      " min: -0.23059610179998957\n",
-      " mean: 0.3322499449886952\n",
-      " max: 0.9836527907931503\n",
-      "\n",
-      "---- 9 fold top 50 voxels \n",
-      " min: 0.007159088992719331\n",
-      " mean: 0.3808042757519997\n",
-      " max: 0.9995562314281493\n",
-      "\n",
-      "---- 10 fold top 50 voxels \n",
-      " min: -0.0912459502536016\n",
-      " mean: 0.18677107327724213\n",
-      " max: 0.8879934001051015\n",
-      "\n",
-      "---- 11 fold top 50 voxels \n",
-      " min: 0.3703220642598255\n",
-      " mean: 0.6727805369677523\n",
-      " max: 0.9519314594330999\n",
-      "\n",
-      "---- 12 fold top 50 voxels \n",
-      " min: 0.38317911690980166\n",
-      " mean: 0.6633852906963049\n",
-      " max: 0.9943586381228416\n",
-      "\n",
-      "---- 13 fold top 50 voxels \n",
-      " min: 0.13804842577329146\n",
-      " mean: 0.521892174637707\n",
-      " max: 0.9687407538043017\n",
-      "\n",
-      "---- 14 fold top 50 voxels \n",
-      " min: -0.29804986516252074\n",
-      " mean: 0.40067146527640807\n",
-      " max: 0.9912254204991708\n",
-      "\n",
-      "---- 15 fold top 50 voxels \n",
-      " min: 0.09395181544550224\n",
-      " mean: 0.5121512754761538\n",
-      " max: 0.9862341319669256\n",
-      "\n",
-      "---- 16 fold top 50 voxels \n",
-      " min: 0.6707167513820523\n",
-      " mean: 0.8451466994858695\n",
-      " max: 0.9862638295898549\n",
-      "\n",
-      "---- 17 fold top 50 voxels \n",
-      " min: -0.4394691906380752\n",
-      " mean: 0.1138138652276524\n",
-      " max: 0.9989765374952754\n",
-      "\n",
-      "---- 18 fold top 50 voxels \n",
-      " min: 0.14012254684195213\n",
-      " mean: 0.5469197172841089\n",
-      " max: 0.962028834696434\n",
-      "\n",
-      "---- 19 fold top 50 voxels \n",
-      " min: -0.3919447144155026\n",
-      " mean: 0.2845042828674727\n",
-      " max: 0.9575476239013732\n",
-      "\n",
-      "---- 20 fold top 50 voxels \n",
-      " min: -1.5571101622408108\n",
-      " mean: -0.28918008528119254\n",
-      " max: 0.981509157015023\n",
-      "\n",
-      "---- 21 fold top 50 voxels \n",
-      " min: -0.37210282574017106\n",
-      " mean: 0.18900901651602048\n",
-      " max: 0.9846069368835526\n",
-      "\n",
-      "---- 22 fold top 50 voxels \n",
-      " min: 0.2456910237430322\n",
-      " mean: 0.5775018238425268\n",
-      " max: 0.99144157573399\n",
+      " min: -0.11174333043074225\n",
+      " mean: 0.4589727537658939\n",
+      " max: 0.9978238180848528\n",
       "\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\xdieg\\OneDrive\\Desktop\\Study\\Artificial & Biological AI\\seminar_paper\\0_mitchell_study.ipynb Cell 13\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/xdieg/OneDrive/Desktop/Study/Artificial%20%26%20Biological%20AI/seminar_paper/0_mitchell_study.ipynb#X15sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m test_indices \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(\u001b[39mlist\u001b[39m(\u001b[39mrange\u001b[39m((samples_per_fold \u001b[39m*\u001b[39m i), samples_per_fold \u001b[39m*\u001b[39m (i \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m))), dtype\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39mint32)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/xdieg/OneDrive/Desktop/Study/Artificial%20%26%20Biological%20AI/seminar_paper/0_mitchell_study.ipynb#X15sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m K \u001b[39m=\u001b[39m \u001b[39m500\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/xdieg/OneDrive/Desktop/Study/Artificial%20%26%20Biological%20AI/seminar_paper/0_mitchell_study.ipynb#X15sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m voxels_indices \u001b[39m=\u001b[39m get_most_stable_voxels(fmriData, train_indices, K \u001b[39m=\u001b[39;49m K)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/xdieg/OneDrive/Desktop/Study/Artificial%20%26%20Biological%20AI/seminar_paper/0_mitchell_study.ipynb#X15sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m# Filtering the dataset\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/xdieg/OneDrive/Desktop/Study/Artificial%20%26%20Biological%20AI/seminar_paper/0_mitchell_study.ipynb#X15sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m filteredfMRIData \u001b[39m=\u001b[39m {}\n",
+      "\u001b[1;32mc:\\Users\\xdieg\\OneDrive\\Desktop\\Study\\Artificial & Biological AI\\seminar_paper\\0_mitchell_study.ipynb Cell 13\u001b[0m in \u001b[0;36mget_most_stable_voxels\u001b[1;34m(fmriData, train_split_indices, K)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/xdieg/OneDrive/Desktop/Study/Artificial%20%26%20Biological%20AI/seminar_paper/0_mitchell_study.ipynb#X15sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(repetitions\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/xdieg/OneDrive/Desktop/Study/Artificial%20%26%20Biological%20AI/seminar_paper/0_mitchell_study.ipynb#X15sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m     \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(i\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m, repetitions\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/xdieg/OneDrive/Desktop/Study/Artificial%20%26%20Biological%20AI/seminar_paper/0_mitchell_study.ipynb#X15sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m         \u001b[39m# (6, 6) but without triangular down and diagonal = (36 - 6) / 2 = 15 values \u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/xdieg/OneDrive/Desktop/Study/Artificial%20%26%20Biological%20AI/seminar_paper/0_mitchell_study.ipynb#X15sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m         voxel_correlation_score\u001b[39m.\u001b[39mappend(np\u001b[39m.\u001b[39mcorrelate(repetitions[i, train_split_indices], repetitions[j, train_split_indices]))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/xdieg/OneDrive/Desktop/Study/Artificial%20%26%20Biological%20AI/seminar_paper/0_mitchell_study.ipynb#X15sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m voxel_correlation_score \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(voxel_correlation_score)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/xdieg/OneDrive/Desktop/Study/Artificial%20%26%20Biological%20AI/seminar_paper/0_mitchell_study.ipynb#X15sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m scores\u001b[39m.\u001b[39mappend(np\u001b[39m.\u001b[39mmean(voxel_correlation_score))\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -374,6 +296,13 @@
     "\n",
     "    # Train-test split\n",
     "    X_train, X_test, y_train, y_test = X[train_indices], X[test_indices], Y[train_indices], Y[test_indices]\n",
+    "    \n",
+    "    # Normalization based on train data\n",
+    "    normalizer = StandardScaler()\n",
+    "    normalizer.fit(X_train)\n",
+    "\n",
+    "    X_train = normalizer.transform(X_train)\n",
+    "    X_test = normalizer.transform(X_test)\n",
     "\n",
     "    # Predicting & scoring\n",
     "    predictors = [LinearRegression() for i in range(K)]\n",
