ordered experiments. contextualized embeddings

--- a/old_experiments/glove_r2best_voxels.ipynb
+++ b/old_experiments/glove_r2best_voxels.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -23,7 +22,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -32,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +42,7 @@
     "        data            Returned dictionary with key ['word'] -> {'context', 'activations'}\n",
     "    \"\"\"\n",
     "    data = {}\n",
-    "    with open(path, \"r\") as datafile:\n",
+    "    with open(path, \"r\", encoding=\"utf8\") as datafile:\n",
     "        lines = datafile.readlines()[skip_lines:] # skip header\n",
     "        for line in tqdm(lines):\n",
     "            word = line.split(\" \")[0]\n",
@@ -55,14 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 400000/400000 [00:37<00:00, 10700.06it/s]\n"
+      "100%|████████████████████████████████████████████████████████████████████████| 400000/400000 [02:29<00:00, 2668.51it/s]\n"
      ]
     }
    ],
@@ -72,7 +70,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -81,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +150,7 @@
     "    # For each sample prediction -> cosine similarity with all truth images\n",
     "    for i in range(X_test.shape[0]):\n",
     "\n",
-    "        pi = np.array([predictor.predict([X_test[i]])[0] for predictor in predictors])[selected_voxels]\n",
+    "        pi = np.array([predictor.predict([X_test[i]])[0] for x, predictor in enumerate(predictors) if x in selected_voxels])\n",
     "\n",
     "        best_sample_match = np.argmax([cosim(pi, y_test[j, selected_voxels]) for j in range(y_test.shape[0])])\n",
     "        true_positives.append(int(best_sample_match == i)) # ground truth is aligned with the sample by index, it should match\n",
@@ -163,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +176,7 @@
        "(60, 2, 21764)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,51 +191,47 @@
     "samples_per_fold = (n_samples // k_folds)\n",
     "n_voxels = fmriData[\"bell\"].shape[0]\n",
     "THRESHOLD = 0.2\n",
-    "accuracies = []\n",
-    "voxels_amounts = []\n",
     "\n",
     "n_samples, samples_per_fold, n_voxels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 21764/21764 [02:47<00:00, 129.88it/s]\n",
-      "100%|██████████| 21764/21764 [02:45<00:00, 131.87it/s]\n",
-      "100%|██████████| 21764/21764 [02:44<00:00, 131.98it/s]\n",
-      "100%|██████████| 21764/21764 [02:44<00:00, 131.93it/s]\n",
-      "100%|██████████| 21764/21764 [02:46<00:00, 131.09it/s]\n",
-      "100%|██████████| 21764/21764 [02:45<00:00, 131.74it/s]\n",
-      "100%|██████████| 21764/21764 [02:44<00:00, 132.01it/s]\n",
-      "100%|██████████| 21764/21764 [02:45<00:00, 131.60it/s]\n",
-      "100%|██████████| 21764/21764 [02:45<00:00, 131.81it/s]\n",
-      "100%|██████████| 21764/21764 [02:45<00:00, 131.79it/s]\n",
-      "100%|██████████| 21764/21764 [02:45<00:00, 131.85it/s]\n",
-      "100%|██████████| 21764/21764 [02:53<00:00, 125.13it/s]\n",
-      "100%|██████████| 21764/21764 [02:47<00:00, 130.31it/s]\n",
-      "100%|██████████| 21764/21764 [02:45<00:00, 131.28it/s]\n",
-      "100%|██████████| 21764/21764 [02:48<00:00, 129.24it/s]\n",
-      "100%|██████████| 21764/21764 [02:46<00:00, 131.08it/s]\n",
-      "100%|██████████| 21764/21764 [02:45<00:00, 131.63it/s]\n",
-      "100%|██████████| 21764/21764 [03:02<00:00, 119.23it/s]\n",
-      "100%|██████████| 21764/21764 [03:04<00:00, 118.03it/s]\n",
-      "100%|██████████| 21764/21764 [03:01<00:00, 119.97it/s]\n",
-      "100%|██████████| 21764/21764 [03:04<00:00, 118.19it/s]\n",
-      "100%|██████████| 21764/21764 [03:23<00:00, 107.06it/s]\n",
-      "100%|██████████| 21764/21764 [03:12<00:00, 113.17it/s]\n",
-      "100%|██████████| 21764/21764 [03:07<00:00, 116.26it/s]\n",
-      "100%|██████████| 21764/21764 [03:03<00:00, 118.42it/s]\n",
-      "100%|██████████| 21764/21764 [03:03<00:00, 118.32it/s]\n",
-      "100%|██████████| 21764/21764 [03:07<00:00, 115.97it/s]\n",
-      "100%|██████████| 21764/21764 [03:24<00:00, 106.45it/s]\n",
-      "100%|██████████| 21764/21764 [03:29<00:00, 104.02it/s]\n",
-      "100%|██████████| 21764/21764 [03:24<00:00, 106.62it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████| 21764/21764 [03:33<00:00, 101.75it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████| 21764/21764 [03:25<00:00, 105.94it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████| 21764/21764 [03:39<00:00, 99.35it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████| 21764/21764 [03:40<00:00, 98.62it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████| 21764/21764 [03:21<00:00, 107.89it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████| 21764/21764 [03:40<00:00, 98.86it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████| 21764/21764 [03:37<00:00, 100.14it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████| 21764/21764 [03:13<00:00, 112.68it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████| 21764/21764 [03:38<00:00, 99.72it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████| 21764/21764 [03:23<00:00, 106.74it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████| 21764/21764 [03:26<00:00, 105.27it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████| 21764/21764 [03:40<00:00, 98.54it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████| 21764/21764 [03:26<00:00, 105.18it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████| 21764/21764 [03:34<00:00, 101.28it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████| 21764/21764 [03:39<00:00, 99.06it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████| 21764/21764 [03:28<00:00, 104.41it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████| 21764/21764 [03:37<00:00, 100.04it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████| 21764/21764 [03:38<00:00, 99.66it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████| 21764/21764 [03:21<00:00, 108.05it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████| 21764/21764 [03:39<00:00, 99.06it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████| 21764/21764 [03:18<00:00, 109.91it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████| 21764/21764 [03:38<00:00, 99.51it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████| 21764/21764 [03:31<00:00, 102.88it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████| 21764/21764 [03:40<00:00, 98.63it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████| 21764/21764 [03:12<00:00, 112.82it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████| 21764/21764 [03:55<00:00, 92.44it/s]\n",
+      "100%|████████████████████████████████████████████████████████████████████████████| 21764/21764 [04:03<00:00, 89.52it/s]\n",
+      "100%|███████████████████████████████████████████████████████████████████████████| 21764/21764 [03:25<00:00, 105.67it/s]\n"
      ]
     },
     {
@@ -247,12 +240,16 @@
        "(1.0, 2559.0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "accuracies = []\n",
+    "voxels_amounts = []\n",
+    "voxels_counts = np.zeros(n_voxels)\n",
+    "\n",
     "for i in (range(k_folds)):\n",
     "\n",
     "    # Extracting filtered (most stable voxels) training set\n",
@@ -299,14 +296,124 @@
     "    scores = np.array(scores)\n",
     "    voxel_indices = np.where(scores > THRESHOLD)[0]\n",
     "    \n",
+    "    # Keep track of the chosen voxels\n",
+    "    voxels_counts[voxel_indices] += 1\n",
+    "    \n",
     "    voxels_amounts.append(voxel_indices.shape[0])\n",
     "    accuracies.append(compute_fold_accuracy(predictors, X_test, y_test, voxel_indices))\n",
     "\n",
-    "np.mean(accuracies), np.mean(voxels_amounts)\n"
+    "np.mean(accuracies), np.mean(voxels_amounts)\n",
+    "\n"
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Common best voxels across folds**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([   29,   197,   200,   466,   485,   500,   678,   763,   764,\n",
+       "         864,   873,   888,   895,   899,   907,   917,   972,  1012,\n",
+       "        1016,  1047,  1050,  1059,  1068,  1078,  1092,  1122,  1208,\n",
+       "        1213,  1230,  1231,  1233,  1245,  1289,  1313,  1315,  1379,\n",
+       "        1484,  1502,  1532,  1549,  1564,  1664,  1732,  1756,  1761,\n",
+       "        1762,  1774,  1791,  1819,  1820,  1824,  1827,  1842,  1845,\n",
+       "        1846,  1851,  1869,  1890,  1901,  1915,  2002,  2031,  2039,\n",
+       "        2091,  2098,  2108,  2114,  2129,  2144,  2146,  2232,  2242,\n",
+       "        2352,  2353,  2423,  2463,  2469,  2485,  2635,  2653,  2722,\n",
+       "        2771,  2787,  2800,  2858,  2943,  2957,  2958,  2986,  3035,\n",
+       "        3055,  3064,  3106,  3114,  3139,  3145,  3239,  3240,  3263,\n",
+       "        3279,  3349,  3368,  3391,  3443,  3448,  3507,  3514,  3540,\n",
+       "        3541,  3664,  3668,  3727,  3728,  3731,  3746,  3748,  3764,\n",
+       "        3783,  3818,  3837,  3854,  3855,  3872,  3890,  3921,  3942,\n",
+       "        3956,  4081,  4189,  4205,  4207,  4310,  4326,  4368,  4438,\n",
+       "        4499,  4519,  4535,  4536,  4543,  4550,  4567,  4591,  4592,\n",
+       "        4598,  4599,  4616,  4645,  4679,  4722,  4723,  4730,  4747,\n",
+       "        4757,  4761,  4763,  4764,  4780,  4798,  4835,  4874,  4892,\n",
+       "        4895,  4914,  4915,  4934,  4973,  5013,  5016,  5017,  5026,\n",
+       "        5038,  5056,  5057,  5081,  5084,  5085,  5088,  5098,  5099,\n",
+       "        5112,  5118,  5120,  5121,  5133,  5147,  5157,  5189,  5193,\n",
+       "        5227,  5232,  5250,  5319,  5364,  5374,  5391,  5395,  5397,\n",
+       "        5410,  5425,  5465,  5553,  5611,  5635,  5656,  5719,  5816,\n",
+       "        5873,  5900,  5934,  6092,  6114,  6119,  6129,  6146,  6147,\n",
+       "        6163,  6180,  6181,  6215,  6229,  6267,  6286,  6323,  6324,\n",
+       "        6341,  6358,  6359,  6370,  6377,  6378,  6379,  6384,  6395,\n",
+       "        6404,  6409,  6413,  6438,  6445,  6446,  6467,  6474,  6481,\n",
+       "        6482,  6493,  6517,  6541,  6544,  6560,  6565,  6598,  6610,\n",
+       "        6612,  6634,  6759,  6785,  6786,  6854,  6871,  6888,  6921,\n",
+       "        6986,  7054,  7072,  7077,  7094,  7114,  7164,  7182,  7252,\n",
+       "        7260,  7268,  7276,  7279,  7314,  7454,  7458,  7466,  7481,\n",
+       "        7487,  7564,  7569,  7631,  7658,  7677,  7716,  7724,  7727,\n",
+       "        7754,  7775,  7794,  7803,  7824,  7940,  7942,  7990,  8090,\n",
+       "        8105,  8161,  8283,  8396,  8401,  8415,  8616,  8626,  8666,\n",
+       "        8668,  8669,  8677,  8706,  8708,  8738,  8784,  8800,  8863,\n",
+       "        8892,  8942,  8950,  8955,  8982,  9008,  9009,  9013,  9040,\n",
+       "        9061,  9095,  9120,  9135,  9185,  9210,  9263,  9297,  9355,\n",
+       "        9360,  9366,  9393,  9417,  9423,  9463,  9477,  9479,  9547,\n",
+       "        9554,  9555,  9600,  9757,  9775,  9794,  9962,  9963, 10036,\n",
+       "       10132, 10137, 10159, 10215, 10250, 10261, 10267, 10299, 10400,\n",
+       "       10411, 10430, 10434, 10439, 10463, 10469, 10554, 10558, 10581,\n",
+       "       10614, 10615, 10702, 10723, 10745, 10819, 10826, 10827, 10857,\n",
+       "       10859, 10885, 10890, 10904, 10959, 10971, 10972, 11018, 11019,\n",
+       "       11051, 11069, 11085, 11088, 11099, 11119, 11152, 11197, 11223,\n",
+       "       11227, 11229, 11230, 11310, 11315, 11331, 11346, 11399, 11513,\n",
+       "       11536, 11547, 11550, 11624, 11648, 11676, 11683, 11687, 11708,\n",
+       "       11727, 11753, 11758, 11768, 11771, 11792, 11797, 11810, 11811,\n",
+       "       11838, 11858, 11865, 11886, 11887, 11893, 11914, 11920, 11941,\n",
+       "       11951, 11973, 11991, 12060, 12065, 12158, 12182, 12295, 12296,\n",
+       "       12337, 12389, 12532, 12641, 12652, 12721, 12762, 12825, 12847,\n",
+       "       12870, 12888, 12911, 12940, 12949, 12967, 12968, 12971, 13053,\n",
+       "       13066, 13248, 13354, 13380, 13382, 13391, 13424, 13510, 13534,\n",
+       "       13555, 13650, 13676, 13677, 13862, 13898, 13963, 13964, 14072,\n",
+       "       14096, 14125, 14126, 14130, 14144, 14150, 14154, 14171, 14180,\n",
+       "       14191, 14235, 14255, 14260, 14268, 14344, 14375, 14419, 14496,\n",
+       "       14499, 14514, 14527, 14533, 14534, 14548, 14719, 14758, 14764,\n",
+       "       14787, 14805, 14869, 14870, 14887, 14896, 14905, 14945, 14946,\n",
+       "       15065, 15083, 15093, 15217, 15232, 15276, 15277, 15326, 15352,\n",
+       "       15375, 15382, 15394, 15407, 15411, 15412, 15413, 15426, 15428,\n",
+       "       15444, 15445, 15470, 15557, 15919, 15952, 16124, 16127, 16153,\n",
+       "       16176, 16180, 16203, 16369, 16550, 16586, 16593, 16599, 16600,\n",
+       "       16605, 16607, 16618, 16634, 16642, 16664, 16670, 16753, 16760,\n",
+       "       16782, 16812, 16830, 16842, 16940, 16974, 17031, 17093, 17115,\n",
+       "       17116, 17127, 17137, 17161, 17178, 17288, 17296, 17347, 17376,\n",
+       "       17400, 17426, 17450, 17585, 17669, 17744, 17812, 17818, 17826,\n",
+       "       17841, 17843, 17852, 17868, 17880, 17928, 18076, 18107, 18141,\n",
+       "       18370, 18429, 18439, 18445, 18463, 18465, 18471, 18483, 18522,\n",
+       "       18573, 18588, 18608, 18627, 18656, 18657, 18703, 18733, 18889,\n",
+       "       18989, 18996, 18998, 19019, 19028, 19042, 19083, 19086, 19096,\n",
+       "       19171, 19172, 19184, 19199, 19210, 19239, 19240, 19242, 19253,\n",
+       "       19284, 19297, 19317, 19467, 19492, 19521, 19527, 19543, 19570,\n",
+       "       19571, 19597, 19598, 19610, 19616, 19645, 19672, 19718, 19829,\n",
+       "       19844, 19937, 19954, 20089, 20115, 20119, 20152, 20155, 20162,\n",
+       "       20166, 20240, 20255, 20292, 20293, 20305, 20367, 20416, 20438,\n",
+       "       20455, 20509, 20513, 20519, 20546, 20573, 20586, 20660, 20661,\n",
+       "       20861, 20990, 20998, 21043, 21047, 21093, 21140, 21174, 21316,\n",
+       "       21344, 21345, 21353, 21354, 21365, 21496, 21500, 21510, 21522,\n",
+       "       21554, 21667, 21686, 21721], dtype=int64)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Determine a subset of voxels that is common across folds and from which we can perform sound multivariate regression\n",
+    "VOXELCOUNT_THRESHOLD = 0.25 # voxels that best perform in 20% of folds\n",
+    "chosen_voxels = np.where((voxels_counts / k_folds) > VOXELCOUNT_THRESHOLD)[0]\n",
+    "chosen_voxels"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -384,7 +491,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -396,7 +502,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch_deeplearning",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -411,9 +517,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.13"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
