--- a/old_experiments/0_BERT.ipynb
+++ b/old_experiments/0_BERT.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,13 +68,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'data\\\\cognival\\\\fmri\\\\harry-potter\\\\1000-random-voxels\\\\scaled_1000_wehbe_targets_1.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\xdieg\\OneDrive\\Desktop\\Study\\Artificial & Biological AI\\seminar_paper\\old_experiments\\0_BERT.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/xdieg/OneDrive/Desktop/Study/Artificial%20%26%20Biological%20AI/seminar_paper/old_experiments/0_BERT.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m voxels \u001b[39m=\u001b[39m \u001b[39m1000\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/xdieg/OneDrive/Desktop/Study/Artificial%20%26%20Biological%20AI/seminar_paper/old_experiments/0_BERT.ipynb#W5sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m filename \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(\u001b[39m\"\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mcognival\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mfmri\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mharry-potter\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mvoxels\u001b[39m}\u001b[39;00m\u001b[39m-random-voxels\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mscaled_\u001b[39m\u001b[39m{\u001b[39;00mvoxels\u001b[39m}\u001b[39;00m\u001b[39m_wehbe_targets_\u001b[39m\u001b[39m{\u001b[39;00msubject\u001b[39m}\u001b[39;00m\u001b[39m.txt\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/xdieg/OneDrive/Desktop/Study/Artificial%20%26%20Biological%20AI/seminar_paper/old_experiments/0_BERT.ipynb#W5sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m fmriData \u001b[39m=\u001b[39m get_continuous_word_activations(filename, context_length)\n",
+      "\u001b[1;32mc:\\Users\\xdieg\\OneDrive\\Desktop\\Study\\Artificial & Biological AI\\seminar_paper\\old_experiments\\0_BERT.ipynb Cell 6\u001b[0m in \u001b[0;36mget_continuous_word_activations\u001b[1;34m(path, context_len)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/xdieg/OneDrive/Desktop/Study/Artificial%20%26%20Biological%20AI/seminar_paper/old_experiments/0_BERT.ipynb#W5sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m data \u001b[39m=\u001b[39m {}\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/xdieg/OneDrive/Desktop/Study/Artificial%20%26%20Biological%20AI/seminar_paper/old_experiments/0_BERT.ipynb#W5sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m context \u001b[39m=\u001b[39m []\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/xdieg/OneDrive/Desktop/Study/Artificial%20%26%20Biological%20AI/seminar_paper/old_experiments/0_BERT.ipynb#W5sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(path, \u001b[39m\"\u001b[39;49m\u001b[39mr\u001b[39;49m\u001b[39m\"\u001b[39;49m) \u001b[39mas\u001b[39;00m datafile:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/xdieg/OneDrive/Desktop/Study/Artificial%20%26%20Biological%20AI/seminar_paper/old_experiments/0_BERT.ipynb#W5sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     lines \u001b[39m=\u001b[39m datafile\u001b[39m.\u001b[39mreadlines()[\u001b[39m1\u001b[39m:] \u001b[39m# skip header\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/xdieg/OneDrive/Desktop/Study/Artificial%20%26%20Biological%20AI/seminar_paper/old_experiments/0_BERT.ipynb#W5sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m lines:\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data\\\\cognival\\\\fmri\\\\harry-potter\\\\1000-random-voxels\\\\scaled_1000_wehbe_targets_1.txt'"
+     ]
+    }
+   ],
    "source": [
     "subject = 1\n",
     "voxels = 1000\n",
-    "filename = os.path.join(\"data\", \"cognival\", \"fmri\", \"harry-potter\", f\"{voxels}-random-voxels\", f\"scaled_{voxels}_wehbe_targets_{subject}.txt\")\n",
+    "filename = os.path.join(\"..\",\"data\", \"cognival\", \"fmri\", \"harry-potter\", f\"{voxels}-random-voxels\", f\"scaled_{voxels}_wehbe_targets_{subject}.txt\")\n",
     "fmriData = get_continuous_word_activations(filename, context_length)"
    ]
   },
@@ -131,6 +144,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
