reproduced one Mitchell et al. 2008 result

--- a/2_binder_features.ipynb
+++ b/2_binder_features.ipynb
@@ -145,7 +145,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.seq_relationship.weight', 'cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.transform.dense.bias', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight']\n",
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight', 'cls.predictions.bias', 'cls.seq_relationship.bias', 'cls.predictions.transform.dense.bias']\n",
       "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -286,14 +286,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 434/434 [00:08<00:00, 48.78it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "X = []\n",
     "Y = []\n",
     "for key in tqdm(binder_features.keys()):\n",
-    "    X.append(lm.get_contextualized_word_embedding(key, key))\n",
+    "    X.append(lm.get_noncontextualized_embeddings(key, layer=5))\n",
     "    Y.append(binder_features[key])\n",
     "\n",
     "Y = np.array(Y).astype(np.float32) # binder features\n",
@@ -302,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,9 +320,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:16<00:00,  1.65s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.29999999999999993"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cross_validate_model(X, Y)"
    ]
@@ -332,36 +358,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"Because they produce token vectors, following the method proposed by Bommasani, Davis, and Cardie (2020) and Vuli ́ c et al. (2020), we created type representations by randomly sampling 1,000 sentences for each target word from the Wikipedia corpus. We generated a contextualized embedding for each word token by feeding the sentence to the publicly available pre-trained models of ELMo and BERT and taking the token vector of the output layer. Finally, an embedding for each word was obtained by averaging its 1,000 contextualized vectors.\""
+    "\"Because they produce token vectors, following the method proposed by Bommasani, Davis, and Cardie (2020) and Vuli ́ c et al. (2020), we created type representations by randomly sampling 1,000 sentences for each target word from the Wikipedia corpus. We generated a contextualized embedding for each word token by feeding the sentence to the publicly available pre-trained models of ELMo and BERT and taking the token vector of the output layer. Finally, an embedding for each word was obtained by averaging its 1,000 contextualized vectors.\". The pipeline:\n",
+    "- Pick up to 1000 sentences that contextualize each word from Binder et al.\n",
+    "- Encode the sentences with BERT and consider a single layer\n",
+    "- For that layer, cluster the 1000 word meanings\n",
+    "- Subtask 1: pick the dominant (most voted) meaning (centroid) for each Binder word. Check whether the mapping improves."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found cached dataset wikipedia (C:/Users/xdieg/.cache/huggingface/datasets/wikipedia/20220301.en/2.0.0/aa542ed919df55cc5d3347f42dd4521d05ca68751f50dbc32bae2a7f1e167559)\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "905c08b8fc0d42bc9446d3ee0f66defc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
     "wikipedia = load_dataset(\"wikipedia\", \"20220301.en\")"
@@ -369,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,26 +429,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  7%|▋         | 32/434 [03:24<1:08:12, 10.18s/it]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import torch\n",
+    "import json\n",
     "\n",
-    "words = []\n",
+    "binder_embeddings = torch.zeros((len(binder_features.keys()), 768))\n",
     "progress = tqdm(range(len(binder_features.keys())))\n",
     "for i, word in enumerate(binder_features.keys()):\n",
     "    context_sentences = get_context_sentences(word, dataset, progress=False, patience=5e3)\n",
-    "    words.append(lm.get_contextualized_embeddings(word, context_sentences, batch_size=4))\n",
+    "    word_embeds = lm.get_contextualized_embeddings(word, context_sentences, batch_size=4)\n",
+    "    labels, word_embedding = lm.get_dominant_meaning(word_embeds[5])\n",
+    "    binder_embeddings[i] = word_embedding\n",
     "    progress.update(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = []\n",
+    "Y = []\n",
+    "for i, key in enumerate(binder_features.keys()):\n",
+    "    X.append(binder_embeddings[i].numpy())\n",
+    "    Y.append(binder_features[key])\n",
+    "\n",
+    "X = np.array(X).astype(np.float32) # word embeddings\n",
+    "Y = np.array(Y).astype(np.float32) # binder features\n",
+    "\n",
+    "X.shape, Y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np.save(os.path.join(\"data\", \"experiments\", \"bert_binder_X.npy\"), X)\n",
+    "# np.save(os.path.join(\"data\", \"experiments\", \"bert_binder_Y.npy\"), Y)\n",
+    "# cross_validate_model(X, Y)"
    ]
   },
   {
@@ -448,7 +479,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Clustering & visualizing the meanings for a given word**"
+    "### Clustering & visualizing the meanings for a given word"
    ]
   },
   {
@@ -506,11 +537,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# np.save(os.path.join(\"data\", \"experiments\", \"bert_binder_X.npy\"), X)\n",
-    "# np.save(os.path.join(\"data\", \"experiments\", \"bert_binder_Y.npy\"), Y)\n",
-    "# cross_validate_model(X, Y)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
